--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Camera</title>
+
+<style>
+html, body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+}
+
+#tap {
+  position: fixed;
+  inset: 0;
+}
+input {
+  display: none;
+}
+</style>
+</head>
+
 <body>
 
-<div id="tap">
-  <p>Tap to record a short video</p>
-  <p>(3–5 seconds)</p>
-</div>
+<div id="tap"></div>
 
 <input
   id="uploader"
@@ -19,23 +41,20 @@ const UPLOAD_API =
 const params = new URLSearchParams(location.search);
 const session = params.get("session") || "";
 
-const uploader = document.getElementById("uploader");
 const tap = document.getElementById("tap");
+const uploader = document.getElementById("uploader");
 
-// 👇 MUST be user-initiated
-tap.addEventListener("click", () => {
-  tap.innerText = "Opening camera…";
+// ONE real user tap — full screen
+tap.addEventListener("pointerdown", () => {
   uploader.click();
 }, { once: true });
 
 uploader.addEventListener("change", async () => {
   const file = uploader.files[0];
   if (!file) {
-    fail("No video recorded");
+    finish({ verified: "false" });
     return;
   }
-
-  tap.innerText = "Uploading…";
 
   try {
     const res = await fetch(UPLOAD_API, {
@@ -46,29 +65,27 @@ uploader.addEventListener("change", async () => {
       body: file
     });
 
-    if (!res.ok) throw new Error("Upload failed");
+    if (!res.ok) throw new Error();
 
     const data = await res.json();
-    success(data.publicUrl);
+    finish({
+      verified: "true",
+      video: data.publicUrl
+    });
 
-  } catch (err) {
-    console.error(err);
-    fail("Upload error");
+  } catch {
+    finish({ verified: "false" });
   }
 });
 
-function success(url) {
-  redirect({ verified: "true", video: url });
-}
-
-function fail(reason) {
-  redirect({ verified: "false", error: reason });
-}
-
-function redirect(params) {
-  const qs = new URLSearchParams({ ...params, session });
+function finish(result) {
+  const qs = new URLSearchParams({
+    ...result,
+    session
+  });
   location.href = `/?${qs.toString()}`;
 }
 </script>
 
 </body>
+</html>
