--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@ html, body {
   width: 100%;
   height: 100%;
   background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#tap {
-  position: fixed;
-  inset: 0;
+/* Big white tap target */
+#circle {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  background: white;
+  opacity: 0.95;
+  touch-action: manipulation;
 }
+
+/* hide file input */
 input {
   display: none;
 }
@@ -25,7 +35,7 @@ input {
 
 <body>
 
-<div id="tap"></div>
+<div id="circle"></div>
 
 <input
   id="uploader"
@@ -41,11 +51,11 @@ const UPLOAD_API =
 const params = new URLSearchParams(location.search);
 const session = params.get("session") || "";
 
-const tap = document.getElementById("tap");
+const circle = document.getElementById("circle");
 const uploader = document.getElementById("uploader");
 
-// ONE real user tap — full screen
-tap.addEventListener("pointerdown", () => {
+// ✅ MUST be click (not pointerdown)
+circle.addEventListener("click", () => {
   uploader.click();
 }, { once: true });
 
