--- a/index.html
+++ b/index.html
@@ -16,17 +16,27 @@ html, body {
   justify-content: center;
 }
 
-/* Big white tap target */
+/* Hollow white ring */
 #circle {
-  width: 140px;
-  height: 140px;
+  width: 160px;
+  height: 160px;
   border-radius: 50%;
-  background: white;
-  opacity: 0.95;
+  border: 10px solid white;
+  background: transparent;
+  box-sizing: border-box;
   touch-action: manipulation;
 }
 
-/* hide file input */
+/* Optional: subtle pulse so it feels alive */
+@keyframes pulse {
+  0% { transform: scale(1); opacity: 1; }
+  50% { transform: scale(1.03); opacity: 0.85; }
+  100% { transform: scale(1); opacity: 1; }
+}
+#circle {
+  animation: pulse 2.5s ease-in-out infinite;
+}
+
 input {
   display: none;
 }
@@ -54,15 +64,16 @@ const session = params.get("session") || "";
 const circle = document.getElementById("circle");
 const uploader = document.getElementById("uploader");
 
-// ✅ MUST be click (not pointerdown)
 circle.addEventListener("click", () => {
+  uploader.value = ""; // 🔑 reset so cancel works
   uploader.click();
-}, { once: true });
+});
 
 uploader.addEventListener("change", async () => {
   const file = uploader.files[0];
+
+  // User backed out of camera → allow retry
   if (!file) {
-    finish({ verified: "false" });
     return;
   }
 
