--- a/index.html
+++ b/index.html
@@ -16,25 +16,93 @@ html, body {
   justify-content: center;
 }
 
-/* Hollow white ring */
+/* ─────────────────────────────
+   CORE RING
+───────────────────────────── */
 #circle {
+  position: relative;
   width: 160px;
   height: 160px;
   border-radius: 50%;
-  border: 10px solid white;
+  border: 10px solid rgba(255,255,255,0.95);
   background: transparent;
   box-sizing: border-box;
   touch-action: manipulation;
+
+  /* base glow */
+  box-shadow:
+    0 0 18px rgba(255,255,255,0.6),
+    0 0 40px rgba(200,220,255,0.35),
+    0 0 90px rgba(160,200,255,0.18);
+
+  animation: breathe 3.2s ease-in-out infinite;
 }
 
-/* Optional: subtle pulse so it feels alive */
-@keyframes pulse {
-  0% { transform: scale(1); opacity: 1; }
-  50% { transform: scale(1.03); opacity: 0.85; }
-  100% { transform: scale(1); opacity: 1; }
+/* ─────────────────────────────
+   BLOOM HALO (soft additive)
+───────────────────────────── */
+#circle::before {
+  content: "";
+  position: absolute;
+  inset: -35px;
+  border-radius: 50%;
+  background: radial-gradient(
+    circle,
+    rgba(200,220,255,0.18),
+    rgba(120,180,255,0.08),
+    transparent 70%
+  );
+  filter: blur(18px);
+  opacity: 0.85;
+  animation: halo 3.2s ease-in-out infinite;
+  pointer-events: none;
 }
-#circle {
-  animation: pulse 2.5s ease-in-out infinite;
+
+/* ─────────────────────────────
+   INNER ENERGY RIM
+───────────────────────────── */
+#circle::after {
+  content: "";
+  position: absolute;
+  inset: -4px;
+  border-radius: 50%;
+  border: 2px solid rgba(255,255,255,0.65);
+  filter: blur(1.5px);
+  opacity: 0.9;
+  pointer-events: none;
+}
+
+/* ─────────────────────────────
+   BREATHING MOTION
+───────────────────────────── */
+@keyframes breathe {
+  0% {
+    transform: scale(1);
+    box-shadow:
+      0 0 18px rgba(255,255,255,0.55),
+      0 0 40px rgba(200,220,255,0.32),
+      0 0 90px rgba(160,200,255,0.15);
+  }
+  50% {
+    transform: scale(1.045);
+    box-shadow:
+      0 0 26px rgba(255,255,255,0.85),
+      0 0 65px rgba(220,240,255,0.55),
+      0 0 140px rgba(180,220,255,0.3);
+  }
+  100% {
+    transform: scale(1);
+    box-shadow:
+      0 0 18px rgba(255,255,255,0.55),
+      0 0 40px rgba(200,220,255,0.32),
+      0 0 90px rgba(160,200,255,0.15);
+  }
+}
+
+@keyframes halo {
+  0%   { opacity: 0.6; }
+  50%  { opacity: 1; }
+  100% { opacity: 0.6; }
 }
 
 input {
