--- a/index.html
+++ b/index.html
@@ -142,7 +142,33 @@ function goBack(extra = {}) {
   location.href =
     `https://coldbrainarchive.pages.dev/?${qs.toString()}`;
 }
+async function extractFrameBase64(file) {
+  return new Promise((resolve, reject) => {
+    const video = document.createElement("video");
+    video.src = URL.createObjectURL(file);
+    video.muted = true;
+    video.playsInline = true;
 
+    video.onloadeddata = () => {
+      const canvas = document.createElement("canvas");
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+
+      const ctx = canvas.getContext("2d");
+      ctx.drawImage(video, 0, 0);
+
+      video.src = URL.createObjectURL(file);
+      
+      const base64 = canvas
+        .toDataURL("image/jpeg", 0.9)
+        .split(",")[1];
+
+      resolve(base64);
+    };
+
+    video.onerror = reject;
+  });
+}
 /* ─────────────────────────────
    OPEN CAMERA
 ───────────────────────────── */
@@ -169,26 +195,51 @@ uploader.addEventListener("change", async () => {
   // User cancelled camera
   if (!file) return;
 
-  try {
-    const res = await fetch(UPLOAD_API, {
+ try {
+  // 1️⃣ Extract a face frame
+  const imageBase64 = await extractFrameBase64(file);
+
+  // 2️⃣ Upload video
+  const res = await fetch(UPLOAD_API, {
+    method: "POST",
+    headers: {
+      "Content-Type": file.type || "video/mp4"
+    },
+    body: file
+  });
+
+  if (!res.ok) throw new Error("Upload failed");
+
+  const data = await res.json();
+
+  // 3️⃣ Send image to Vision
+  const visionRes = await fetch(
+    "https://script.google.com/macros/s/AKfycbyCRugnoCKl_T6EPuHs6D-ZUuT5LyMpp5Q7YC_d0W7q1jDzpG0dp94sQYQin7WwqT0N4g/exec",
+    {
       method: "POST",
-      headers: {
-        "Content-Type": file.type || "video/mp4"
-      },
-      body: file
-    });
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        image: imageBase64,
+        video: data.publicUrl
+      })
+    }
+  );
 
-    if (!res.ok) throw new Error();
+  const visionData = await visionRes.json();
 
-    const data = await res.json();
-    goBack({
-      verified: "true",
-      video: data.publicUrl
-    });
+  // 4️⃣ Decide verification
+  const verified = visionData.verified === true;
 
-  } catch {
-    goBack({ verified: "false" });
-  }
+  // 5️⃣ Return to game ONCE
+  goBack({
+    verified: verified ? "true" : "false",
+    video: verified ? data.publicUrl : ""
+  });
+
+} catch (err) {
+  console.error(err);
+  goBack({ verified: "false" });
+}
 });
 </script>
 
