--- a/index.html
+++ b/index.html
@@ -142,12 +142,19 @@ function goBack(extra = {}) {
   location.href =
     `https://coldbrainarchive.pages.dev/?${qs.toString()}`;
 }
+
+/* ─────────────────────────────
+   FRAME EXTRACTION (FIXED)
+───────────────────────────── */
 async function extractFrameBase64(file) {
   return new Promise((resolve, reject) => {
     const video = document.createElement("video");
-    video.src = URL.createObjectURL(file);
+    const url = URL.createObjectURL(file);
+
+    video.src = url;
     video.muted = true;
     video.playsInline = true;
+    video.preload = "auto";
 
     video.onloadeddata = () => {
       const canvas = document.createElement("canvas");
@@ -157,8 +164,8 @@ async function extractFrameBase64(file) {
       const ctx = canvas.getContext("2d");
       ctx.drawImage(video, 0, 0);
 
-      video.src = URL.createObjectURL(file);
-      
+      URL.revokeObjectURL(url); // ✅ IMPORTANT
+
       const base64 = canvas
         .toDataURL("image/jpeg", 0.9)
         .split(",")[1];
@@ -167,8 +174,10 @@ async function extractFrameBase64(file) {
     };
 
     video.onerror = reject;
+    video.load(); // ✅ REQUIRED for iOS Safari
   });
 }
+</script>
 /* ─────────────────────────────
    OPEN CAMERA
 ───────────────────────────── */
