--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ function goBack(extra = {}) {
 }
 
 /* ─────────────────────────────
-   FRAME EXTRACTION (FIXED)
+   FRAME EXTRACTION (iOS SAFE)
 ───────────────────────────── */
 async function extractFrameBase64(file) {
   return new Promise((resolve, reject) => {
@@ -164,7 +164,7 @@ async function extractFrameBase64(file) {
       const ctx = canvas.getContext("2d");
       ctx.drawImage(video, 0, 0);
 
-      URL.revokeObjectURL(url); // ✅ IMPORTANT
+      URL.revokeObjectURL(url);
 
       const base64 = canvas
         .toDataURL("image/jpeg", 0.9)
@@ -174,9 +174,74 @@ async function extractFrameBase64(file) {
     };
 
     video.onerror = reject;
-    video.load(); // ✅ REQUIRED for iOS Safari
+    video.load(); // REQUIRED on iOS
   });
 }
+
+/* ─────────────────────────────
+   OPEN CAMERA
+───────────────────────────── */
+circle.addEventListener("click", () => {
+  uploader.value = "";
+  uploader.click();
+});
+
+/* ─────────────────────────────
+   TAP OUTSIDE → CANCEL & RETURN
+───────────────────────────── */
+document.body.addEventListener("pointerdown", (e) => {
+  if (!circle.contains(e.target)) {
+    goBack({ verified: "false" });
+  }
+});
+
+/* ─────────────────────────────
+   HANDLE VIDEO
+───────────────────────────── */
+uploader.addEventListener("change", async () => {
+  const file = uploader.files[0];
+  if (!file) return;
+
+  try {
+    const imageBase64 = await extractFrameBase64(file);
+
+    const res = await fetch(UPLOAD_API, {
+      method: "POST",
+      headers: {
+        "Content-Type": file.type || "video/mp4"
+      },
+      body: file
+    });
+
+    if (!res.ok) throw new Error("Upload failed");
+
+    const data = await res.json();
+
+    const visionRes = await fetch(
+      "https://script.google.com/macros/s/AKfycbyCRugnoCKl_T6EPuHs6D-ZUuT5LyMpp5Q7YC_d0W7q1jDzpG0dp94sQYQin7WwqT0N4g/exec",
+      {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          image: imageBase64,
+          video: data.publicUrl
+        })
+      }
+    );
+
+    const visionData = await visionRes.json();
+    const verified = visionData.verified === true;
+
+    goBack({
+      verified: verified ? "true" : "false",
+      video: verified ? data.publicUrl : ""
+    });
+
+  } catch (err) {
+    console.error(err);
+    goBack({ verified: "false" });
+  }
+});
 </script>
 /* ─────────────────────────────
    OPEN CAMERA
