--- a/index.html
+++ b/index.html
@@ -14,23 +14,56 @@ html, body {
   overflow: hidden;
 }
 
+#wrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 video {
   width: 100%;
   height: 100%;
   object-fit: contain;
   background: black;
 }
+
+/* Invisible tap zones */
+.tap {
+  position: absolute;
+  pointer-events: auto;
+}
+
+/* Lens area (center) */
+#tap-lens {
+  left: 30%;
+  top: 35%;
+  width: 40%;
+  height: 35%;
+}
+
+/* Shutter button (top right) */
+#tap-shutter {
+  right: 8%;
+  top: 8%;
+  width: 18%;
+  height: 18%;
+}
 </style>
 </head>
 
 <body>
 
-<video
-  id="camVideo"
-  playsinline
-  muted
-  preload="auto"
-></video>
+<div id="wrap">
+  <video
+    id="camVideo"
+    playsinline
+    muted
+    preload="auto"
+  ></video>
+
+  <div id="tap-lens" class="tap"></div>
+  <div id="tap-shutter" class="tap"></div>
+</div>
 
 <input
   id="uploader"
@@ -58,7 +91,7 @@ const UPLOAD_API =
   "https://archive-worker.coldbrainarchive.workers.dev/upload?purpose=camera";
 
 /* ─────────────────────────────
-   RETURN SCENE HANDLING
+   RETURN SCENE
 ───────────────────────────── */
 const params = new URLSearchParams(location.search);
 const sceneFromGame = params.get("scene");
@@ -77,7 +110,7 @@ function goBack(extra = {}) {
 }
 
 /* ─────────────────────────────
-   STATE MACHINE
+   VIDEO ENGINE
 ───────────────────────────── */
 const video = document.getElementById("camVideo");
 const uploader = document.getElementById("uploader");
@@ -85,14 +118,14 @@ const uploader = document.getElementById("uploader");
 let state = 0;
 // 0 = idle
 // 1 = lens off
-// 2 = crank → open camera
-// 3 = photo taken → return
+// 2 = waiting for photo
+// 3 = snap → return
 
-function playLoop(src) {
-  video.loop = true;
+function showFirstFrame(src) {
+  video.loop = false;
   video.src = src;
   video.currentTime = 0;
-  video.play();
+  video.load();
 }
 
 function playOnce(src, onEnd) {
@@ -110,57 +143,57 @@ function playOnce(src, onEnd) {
 /* ─────────────────────────────
    INIT
 ───────────────────────────── */
-playLoop(VIDEOS.idle);
+showFirstFrame(VIDEOS.idle);
 
 /* ─────────────────────────────
-   TAP LOGIC
+   LENS TAP
 ───────────────────────────── */
-video.addEventListener("click", () => {
-  if (state === 0) {
-    // Lens cap off
-    state = 1;
-    playOnce(VIDEOS.lens, () => {
-      playLoop(VIDEOS.idle);
-    });
-  }
-  else if (state === 1) {
-    // Film crank → open camera
-    state = 2;
-    playOnce(VIDEOS.crank, () => {
-      uploader.value = "";
-      uploader.click();
-    });
-  }
+document.getElementById("tap-lens").addEventListener("click", () => {
+  if (state !== 0) return;
+  state = 1;
+
+  playOnce(VIDEOS.lens, () => {
+    showFirstFrame(VIDEOS.idle);
+  });
 });
 
 /* ─────────────────────────────
-   PHOTO TAKEN
+   SHUTTER TAP (MOBILE SAFE)
+───────────────────────────── */
+document.getElementById("tap-shutter").addEventListener("click", () => {
+  if (state !== 1) return;
+  state = 2;
+
+  // MUST be inside user gesture for iOS
+  uploader.value = "";
+  uploader.click();
+
+  playOnce(VIDEOS.crank);
+});
+
+/* ─────────────────────────────
+   PHOTO RESULT
 ───────────────────────────── */
 uploader.addEventListener("change", async () => {
   const file = uploader.files[0];
   if (!file) {
-    // cancelled → reset
     state = 0;
-    playLoop(VIDEOS.idle);
+    showFirstFrame(VIDEOS.idle);
     return;
   }
 
   try {
-    // Upload photo
     const res = await fetch(UPLOAD_API, {
       method: "POST",
-      headers: {
-        "Content-Type": file.type || "image/jpeg"
-      },
+      headers: { "Content-Type": file.type || "image/jpeg" },
       body: file
     });
 
-    if (!res.ok) throw new Error("Upload failed");
+    if (!res.ok) throw new Error();
 
     const data = await res.json();
-
-    // Play photo animation → return
     state = 3;
+
     playOnce(VIDEOS.snap, () => {
       goBack({
         verified: data.verified ? "true" : "false",
@@ -168,17 +201,7 @@ uploader.addEventListener("change", async () => {
       });
     });
 
-  } catch (err) {
-    console.error(err);
-    goBack({ verified: "false" });
-  }
-});
-
-/* ─────────────────────────────
-   TAP OUTSIDE = CANCEL
-───────────────────────────── */
-document.addEventListener("pointerdown", (e) => {
-  if (e.target !== video) {
+  } catch {
     goBack({ verified: "false" });
   }
 });
